--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "!*/__tests__"
   ],
   "dependencies": {
-    "@loopback/authentication": "^3.2.4",
     "@loopback/boot": "^1.6.0",
     "@loopback/context": "^1.25.0",
     "@loopback/core": "^1.12.0",
@@ -51,8 +50,7 @@
     "@loopback/repository": "^1.16.0",
     "@loopback/rest": "^1.25.0",
     "@loopback/rest-explorer": "^1.4.6",
-    "@loopback/service-proxy": "^1.3.13",
-    "loopback-connector-mongodb": "^4.2.0"
+    "@loopback/service-proxy": "^1.3.13"
   },
   "devDependencies": {
     "@loopback/build": "^3.0.0",
