--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.3",
+    "mongoose-paginate-v2": "^1.3.6",
     "mongoose-timestamp-plugin": "0.0.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2"
