--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "mongoose": "^5.9.9",
     "mongoose-paginate-v2": "^1.3.9",
     "mongoose-timestamp-plugin": "0.0.1",
