--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose-paginate-v2": "^1.3.9",
     "mongoose-timestamp-plugin": "0.0.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "read-excel-file": "^4.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
