--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
     "read-excel-file": "^4.0.6",
+    "stripe": "^8.117.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
